--- a/flickr.html
+++ b/flickr.html
@@ -10,7 +10,7 @@
     font-weight: bold;
   }
 </style>
-<script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
+<script src="bower_components/jquery/dist/jquery.min.js"></script>
 <script type="text/javascript" src="./script/flickr.js"></script>
 </head>
 <body>
